--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,12 @@
 </head>
 <body>
 
+<div style="height:80px; width:100%; background:#000;">
+  <span style="color:#eee; font-size:60px; margin:10px;">
+    COVERS
+  </span>
+</div>
+
 <%= yield %>
 
 </body>
